--- a/index.html
+++ b/index.html
@@ -29,13 +29,10 @@
                     </canvas>
                 </div>
                 <div class="col-7 word">
-                    <input class="form-control" disabled>
-                    <input class="form-control" disabled>
-                    <input class="form-control" disabled>
+                    <div id="word-content">
+                    </div>
+
                     <hr>
-                    <button id="drowstep" type="button"
-                        class="btn btn-outline-primary">Draw
-                        Step</button>
 
                     <div id="btn-group-word">
 
